2007-10-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* smonitor_dev.C:
	- Changed NUM_TYPES to 14.

2007-08-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Updated a point version number. Official release 11.1.1

2007-08-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Fixed build problem on OSX.

2007-07-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	Changed the default c_font_r value to dark blue (0,0,139).

2007-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Updated a minor version. Official Relaase 11.1.0.

2007-05-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	Updated a point version number. Release Candidate 11.0.4.

2007-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Fixed a defect in the Xpm library checking.

	* src/smonitor_dev.C:
	Fixed a bug in the penalty kick score counter.

2007-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* src/ascii_dev.C:
	* src/ascii_dev.h:
	* src/ascii_processor.C:
	* src/ascii_processor.h:
	* src/coder.C:
	* src/coder.h:
	* src/input_dev.h:
	* src/menu_x11.C:
	* src/menu_x11.h:
	* src/popup_x11.C:
	* src/popup_x11.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	* src/structure.h:
	* src/udpsocket.h:
	* src/valueparser.C:
	* src/valueparser.h:
	Changed the constant int variables for the buffer size definition
	to the no name enum.
	Moved the definition of static memver variables into the source
	file.
	Updated a point version number.

2007-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Updated a micro version.

	* src/smonitor_dev.C:
	Added a clear operation of the penalty state container in the
	monitor init procedure..

2007-05-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	The score of penalty shootout can be displayed on the score
	board.
